--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rafael/notification",
+    "name": "rafansilva/notification",
     "description": "This is a library that uses composer as the basis for generating email notifications",
     "type": "library",
     "license": "MIT",
