--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,32 @@
 {
-    "name": "rafansilva/notification",
-    "description": "This is a library that uses composer as the basis for generating email notifications",
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Rafael N. Silva",
-            "email": "rafaelnascimento0505@gmail.com"
-        }
-    ],
-    "minimum-stability": "dev",
-    "config": {
-        "vendor-dir": "vendor"
-    },
-    "autoload": {
-        "psr-4": {
-            "RafaNSilva\\Notification\\": "src"
-        }
-    },
-    "require": {
-        "phpmailer/phpmailer": "6.2.0"
+  "name": "rafansilva/emailsender",
+  "description": "Uma biblioteca simples para enviar e-mails que abstrai o comportamento da PHPMAILER",
+  "keywords": [
+    "email",
+    "e-mail",
+    "notification",
+    "Rafael N. Silva",
+    "sender",
+    "email sender",
+    "phpmailer"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Rafael N. Silva",
+      "email": "rafaelnascimento0505@gmail.com",
+      "role": "Developer"
     }
+  ],
+  "require": {
+    "php": "^7.1",
+    "ext-json": "*",
+    "ext-curl": "*",
+    "phpmailer/phpmailer": "v6.3.*"
+  },
+  "autoload": {
+    "psr-4": {
+      "RafaNSilva\\Notification\\": "src"
+    }
+  }
 }
