--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
     "php": "^7.1",
     "ext-json": "*",
     "ext-curl": "*",
-    "phpmailer/phpmailer": "v6.3.*"
+    "phpmailer/phpmailer": "v6.4.*"
   },
   "autoload": {
     "psr-4": {
-      "RafaNSilva\\Notification\\": "src"
+      "RafaNSilva\\Support\\": "src"
     }
   }
 }
